Changed from database to in memory

--- a/ProjetoRUP/implementacao/src/main/resources/application.properties
+++ b/ProjetoRUP/implementacao/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8082
 
 carrinho.servlet.path=/carrinho
+produto.servlet.path=/produto
 conta.servlet.path=/conta
+item.servlet.path=/item
 
 
 #spring.datasource.url=jdbc:h2:mem:testdb
@@ -16,15 +18,15 @@ conta.servlet.path=/conta
 #spring.data.mongodb.database=ecommerce
 
 #database
-spring.jpa.database=POSTGRESQL
-spring.sql.init.platform=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Postgres2023!
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database=POSTGRESQL
+#spring.sql.init.platform=postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=Postgres2023!
+#spring.jpa.show-sql=false
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 
 
 # logging
