--- a/ProjetoRUP/implementacao/backend/src/main/resources/application.properties
+++ b/ProjetoRUP/implementacao/backend/src/main/resources/application.properties
@@ -5,6 +5,9 @@ produto.servlet.path=/produto
 conta.servlet.path=/conta
 item.servlet.path=/item
 
+fabrica.repositorios.choice=inmemory
+
+url.api.cartao=http://localhost:8081/pagamento
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
@@ -14,8 +17,10 @@ item.servlet.path=/item
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=true
 
-#spring.data.mongodb.uri=mongodb://localhost:27017
-#spring.data.mongodb.database=ecommerce
+
+
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=ecommerce
 
 #database
 #spring.jpa.database=POSTGRESQL
