Adding choice to choose between mongo and inmemory

--- a/ProjetoRUP/implementacao/backend/src/main/resources/application.properties
+++ b/ProjetoRUP/implementacao/backend/src/main/resources/application.properties
@@ -5,7 +5,8 @@ produto.servlet.path=/produto
 conta.servlet.path=/conta
 item.servlet.path=/item
 
-fabrica.repositorios.choice=inmemory
+# mongo ou inmemory
+fabrica.repositorios.choice=mongo
 
 url.api.cartao=http://localhost:8081/pagamento
 
