update projeto com base nos comentários do monitor

--- a/ProjetoRUP/implementacao/backend/src/main/resources/application.properties
+++ b/ProjetoRUP/implementacao/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ conta.servlet.path=/conta
 item.servlet.path=/item
 
 # mongo ou inmemory
-fabrica.repositorios.choice=mongo
+fabrica.repositorios.choice=inmemory
 
 url.api.cartao=http://localhost:8081/pagamento
 
