Ajustes Dockerfile e adição de coleção do Postman para testes

--- a/ProjetoSOA/conta/src/main/resources/application.yml
+++ b/ProjetoSOA/conta/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   application:
-    name: conta-acesso
+    name: conta
+
   data:
     mongodb:
       uri: mongodb://localhost:27017
       database: ecommerce
   datasource:
-    url: jdbc:postgresql://localhost:5432/ecommerce
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/ecommerce}
     username: postgres
     password: Postgres2023!
 
