--- a/ProjetoSOA/produto/Dockerfile
+++ b/ProjetoSOA/produto/Dockerfile
@@ -1,13 +1,8 @@
-FROM maven:3.8.6-openjdk-11-slim as base
-COPY pom.xml /home/
-WORKDIR /home
-RUN mvn dependency:resolve
-COPY src/ src/
-RUN mvn package -Dmaven.test.skip
+FROM maven:3.8.5-openjdk-17-slim AS build
+COPY pom.xml /app/
+COPY src /app/src
+RUN mvn -f /app/pom.xml clean package
 
-
-FROM openjdk:11-jre-slim
-WORKDIR /home
-COPY --from=base /home/target/*.jar .
-RUN mv `ls -r *.*-SNAPSHOT.jar | head -1` app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+FROM openjdk:17.0.1-jdk-slim
+COPY --from=build /app/target/*.jar /app/app.jar
+ENTRYPOINT ["java","-jar","/app/app.jar"]
