--- a/ProjetoSOA/produto/src/main/resources/application.properties
+++ b/ProjetoSOA/produto/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port=8084
 
 spring.application.name=produto
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka}
 
 produto.servlet.path=/produto
 
 # mongo ou inmemory
-fabrica.repositorios.choice=inmemory
+fabrica.repositorios.choice={REPOSITORIOS_CHOICE:inmemory}
 
 #spring.datasource.url=jdbc:h2:mem:test db
 #spring.datasource.driverClassName=org.h2.Driver
@@ -18,20 +18,16 @@ fabrica.repositorios.choice=inmemory
 #spring.jpa.generate-ddl=true
 
 
-
-spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=ecommerce
-
 #database
-#spring.jpa.database=POSTGRESQL
-#spring.sql.init.platform=postgresql
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=Postgres2023!
-#spring.jpa.show-sql=false
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgresql
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/ecommerce}
+spring.datasource.username=postgres
+spring.datasource.password=Postgres2023!
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 # logging
