--- a/ProjetoSOA/gateway/src/main/resources/application.yml
+++ b/ProjetoSOA/gateway/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 8080
 
-urls:
+uris:
   produto:
     uri: lb://produto
-  conta-acesso:
-    uri: lb://conta-acesso
+  conta:
+    uri: lb://conta
 
 eureka:
   client:
@@ -14,7 +14,7 @@ eureka:
 
 gateway-paths:
   produto: /produto
-  conta-acesso: /conta
+  conta: /conta
   carrinho: /carrinho
 
 spring:
@@ -33,17 +33,17 @@ spring:
             allowedHeaders: '*'
       routes:
         - id: produto
-          uri: ${urls.produto.uri}
+          uri: ${uris.produto.uri}
           predicates:
             - Path=${gateway-paths.produto}/**
             - Method=GET,POST,OPTIONS
-        - id: conta-acesso
-          uri: ${urls.conta-acesso.uri}
+        - id: conta
+          uri: ${uris.conta.uri}
           predicates:
-            - Path=${gateway-paths.conta-acesso}/**
+            - Path=${gateway-paths.conta}/**
             - Method=GET,POST,OPTIONS
         - id: carrinho
-          uri: ${urls.conta-acesso.uri}
+          uri: ${uris.conta.uri}
           predicates:
               - Path=${gateway-paths.carrinho}/**
               - Method=GET,POST,OPTIONS
