Finalização do microserviço de Produto e Ajustes no microserviço de Conta

--- a/ProjetoSOA/produto/src/main/resources/application.properties
+++ b/ProjetoSOA/produto/src/main/resources/application.properties
@@ -5,18 +5,10 @@ spring.application.name=produto
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka}
 
 produto.servlet.path=/produto
+produto.api-key=mG1A1DddQi3ZrPQt
 
-# mongo ou inmemory
-fabrica.repositorios.choice={REPOSITORIOS_CHOICE:inmemory}
-
-#spring.datasource.url=jdbc:h2:mem:test db
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
-
+# bdr ou inmemory
+fabrica.repositorios.choice=${REPOSITORIOS_CHOICE:bdr}
 
 #database
 spring.jpa.database=POSTGRESQL
