--- a/ProjetoSOA/conta/src/main/resources/application.yml
+++ b/ProjetoSOA/conta/src/main/resources/application.yml
@@ -1,11 +1,6 @@
 spring:
   application:
     name: conta
-
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017
-      database: ecommerce
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/ecommerce}
     username: postgres
@@ -29,15 +24,16 @@ server:
 conta:
   servlet:
     path: /conta
+  api-key: PIx9BBmbPPLFZfGB
 
 produto:
   api:
-    url: ${PRODUTO_API_URL:http://localhost:8084}
+    url: ${PRODUTO_API_URL:lb://produto}
 
 # mongo ou inmemory
 fabrica:
   repositorios:
-    choice: bdr
+    choice: {REPOSITORIOS_CHOICE:bdr}
 
 #logging
 logging:
