--- a/ProjetoSOA/carrinho/src/main/resources/application.yml
+++ b/ProjetoSOA/carrinho/src/main/resources/application.yml
@@ -1,38 +1,39 @@
 spring:
   application:
-    name: conta-acesso
+    name: carrinho
 
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     service-url:
       defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
+#  instance:
+#    leaseRenewalIntervalInSeconds: 1
 
 server:
-  port: 8083
+  port: 8085
 
 conta:
   servlet:
     path: /conta
+  api:
+    url: ${CONTA_API_URL:lb://conta}
+  api-key: PIx9BBmbPPLFZfGB
+
 carrinho:
   servlet:
     path: /carrinho
 
 produto:
   api:
-    url: ${PRODUTO_API_URL:http://localhost:8084}
+    url: ${PRODUTO_API_URL:lb://produto}
 
-# mongo ou inmemory
-fabrica:
-  repositorios:
-    choice: inmemory
-
-#spring.data.mongodb.uri=mongodb://localhost:27017
-#spring.data.mongodb.database=ecommerce
 
 #logging
 logging:
   level:
-    org.springframework.web: INFO
+    org.springframework.web: DEBUG
 
 management:
   health:
