--- a/ProjetoSOA/conta/src/main/resources/application.yml
+++ b/ProjetoSOA/conta/src/main/resources/application.yml
@@ -15,8 +15,12 @@ spring:
 
 eureka:
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     service-url:
       defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
+#  instance:
+#    leaseRenewalIntervalInSeconds: 1
 
 server:
   port: 8083
@@ -33,12 +37,12 @@ produto:
 # mongo ou inmemory
 fabrica:
   repositorios:
-    choice: {REPOSITORIOS_CHOICE:bdr}
+    choice: ${REPOSITORIOS_CHOICE:bdr}
 
 #logging
 logging:
   level:
-    org.springframework.web: INFO
+    org.springframework.web: DEBUG
 
 management:
   health:
