--- a/ProjetoSOA/frontend/package.json
+++ b/ProjetoSOA/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
