Ajuste rotas gateway

--- a/ProjetoSOA/gateway/src/main/resources/application.yml
+++ b/ProjetoSOA/gateway/src/main/resources/application.yml
@@ -48,7 +48,7 @@ spring:
           uri: ${uris.carrinho.uri}
           predicates:
               - Path=${gateway-paths.carrinho}/**
-              - Method=GET,POST,OPTIONS
+              - Method=GET,POST,PUT,DELETE,OPTIONS
 
 logging:
   level:
